--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
-          <a href="#" class="header__link">Узнать →</a>
+          <a href="#" class="header__link">Узнать &rarr;</a>
         </p>
         <div class="header__square-pic"></div>
         <img
@@ -54,129 +54,125 @@
           </div>
         </section>
         <section class="digits">
-          <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
-          <h3 class="section-subtitle section-subtitle_theme_light">
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">
             Про учёбу и мозг
-          </h3>
-          <div class="table table_theme_light">
-            <div class="table__cell table__cell_theme_light">
-              <h4 class="table__heading">86 миллиардов</h4>
+          </p>
+          <div class="table">
+            <div class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
               <p class="table__text">Число нейронов в мозге человека</p>
             </div>
-            <div class="table__cell table__cell_theme_light">
-              <h4 class="table__heading">2.1 миллиарда</h4>
+            <div class="table__cell">
+              <h3 class="table__heading">2.1 миллиарда</h3>
               <p class="table__text">
                 Число нуждающихся в повышении квалификации
               </p>
-              <p class="table__author">Всемирный Банк, 2017</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </div>
-            <div class="table__cell table__cell_theme_light">
-              <h4 class="table__heading">1000 терабайт</h4>
+            <div class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
               <p class="table__text">Объём памяти человека</p>
             </div>
-            <div class="table__cell table__cell_theme_light">
-              <h4 class="table__heading">500 триллионов</h4>
+            <div class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
               <p class="table__text">
                 Число ответственных за обучение нервных синапсов у взрослого
                 человека
               </p>
             </div>
-            <div class="table__cell table__cell_theme_light">
-              <h4 class="table__heading">420 миллионов</h4>
+            <div class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
               <p class="table__text">
                 Число взрослых людей моложе 25 лет, не имеющих образования для
                 трудоустройства
               </p>
-              <p class="table__author">Всемирный Банк, 2017</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </div>
-            <div class="table__cell table__cell_theme_light">
-              <h4 class="table__heading">17–20 лет</h4>
+            <div class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
               <p class="table__text">Пик обучаемости</p>
             </div>
-            <div class="table__cell table__cell_theme_light">
-              <h4 class="table__heading">1885 год</h4>
+            <div class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
               <p class="table__text">Открытие кривой забывания</p>
             </div>
-            <div class="table__cell table__cell_theme_light">
-              <h4 class="table__heading">1889 год</h4>
+            <div class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
               <p class="table__text">Открытие условного рефлекса</p>
             </div>
           </div>
         </section>
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <h3 class="feyman__subtitle">Выучить и не забыть.</h3>
-          <a href="#" class="feyman__link">Подробнее →</a>
+          <p class="feyman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="feyman__link">Подробнее &rarr;</a>
         </section>
         <section class="kaufman">
-          <img
-            class="kaufman__triangle"
-            src="./images/kaufman-triangle.svg"
-            alt="Изображение синего треугольника"
-          />
+          <div class="kaufman__triangle"></div>
           <h2 class="section-title section-title_theme_dark">
             Принципы обучения
           </h2>
-          <h3 class="section-subtitle section-subtitle_theme_dark">
+          <p class="section-subtitle section-subtitle_theme_dark">
             от Джоша Кауфмана
-          </h3>
+          </p>
           <div class="table table_theme_dark">
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">1</h4>
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">
                 Выберите привлекательный проект.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">2</h4>
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">3</h4>
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">
                 Определите целевой уровень мастерства.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">4</h4>
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">
                 Разбейте навык на элементы.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">5</h4>
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">
                 Приготовьте всё необходимое для занятий.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">6</h4>
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">
                 Устраните препятствия для занятий.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">7</h4>
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">
                 Выделите специальное время для занятий.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">8</h4>
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">
                 Создайте быстрые петли обратной связи.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">9</h4>
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">10</h4>
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
               </p>
@@ -192,10 +188,10 @@
               src="./images/logo_place_footer.svg"
               alt="Логотип Яндекс Практикум"
             />
-            <p class="footer__author">© 2019. Виктор Абанькин</p>
+            <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
           </div>
           <nav class="footer__column footer__column_content_info">
-            <h4 class="footer__column-heading">О Практикуме</h4>
+            <h3 class="footer__column-heading">О Практикуме</h3>
             <ul class="footer__column-links">
               <li><a href="#" class="footer__column-link">Главная</a></li>
               <li><a href="#" class="footer__column-link">Концепция</a></li>
@@ -203,7 +199,7 @@
             </ul>
           </nav>
           <nav class="footer__column footer__column_content_social">
-            <h4 class="footer__column-heading">Соцсети</h4>
+            <h3 class="footer__column-heading">Соцсети</h3>
             <ul class="footer__column-links">
               <li>
                 <a href="#" class="footer__column-link" target="_blank"
