Исправлены опечатки в названии классов

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
-          <p class="section-subtitle">
-            Про учёбу и мозг
-          </p>
+          <p class="section-subtitle">Про учёбу и мозг</p>
           <div class="table">
             <div class="table__cell">
               <h3 class="table__heading">86 миллиардов</h3>
@@ -105,8 +103,8 @@
         </section>
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feyman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="feyman__link">Подробнее &rarr;</a>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="feynman__link">Подробнее &rarr;</a>
         </section>
         <section class="kaufman">
           <div class="kaufman__triangle"></div>
@@ -184,7 +182,7 @@
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
             <img
-              class="logo logo__place_footer"
+              class="logo logo_place_footer"
               src="./images/logo_place_footer.svg"
               alt="Логотип Яндекс Практикум"
             />
