--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           использовать в своей жизни?
           <a href="#" class="header__link">Узнать &rarr;</a>
         </p>
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
         <img
           class="header__main-illustration"
           src="./images/header-image.png"
@@ -52,6 +52,112 @@
               </p>
             </div>
           </div>
+        </section>
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <div class="cards">
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-attention.png"
+                alt="Изображение книги в руках"
+              />
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать сфокусированное и
+                рассеянное мышление.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-recall.png"
+                alt="Изображение скульптуры сидящего мальчика"
+              />
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит соединить разрозненные
+                порции памяти.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-interliving.png"
+                alt="Изображение вестибюля метро"
+              />
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, они обогащают друг
+                друга.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-question.png"
+                alt="Изображение человека, стоящего посередине пустого зала"
+              />
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, который вас
+                действительно волнует.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-competence.png"
+                alt="Изображение стопки книг на ладони"
+              />
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: вам только
+                кажется, что вы владеете новой темой.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="video">
+          <h2 class="section-title">Видео нa TED</h2>
+          <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+          <div class="video__iframes">
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              title="Видео об обучении"
+              allowfullscreen
+            ></iframe>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              title="Видео о прокрастинации"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+        <section class="oakley">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="feynman__link">Подробнее &rarr;</a>
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
@@ -101,13 +207,33 @@
             </div>
           </div>
         </section>
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <section class="khan">
+          <div class="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__title">Весь мир — школа</h2>
+            <p class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.
+            </p>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <img
+                class="khan__book-pic"
+                src="./images/khan-book.jpg"
+                alt="Обложка книги Салмана Хана 'Весь мир - школа'"
+              />
+              <a href="#" class="khan__buy-link" target="_blank"
+                >Купить книгу &rarr;</a
+              >
+            </div>
+          </div>
         </section>
         <section class="kaufman">
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
           <h2 class="section-title section-title_theme_dark">
             Принципы обучения
           </h2>
@@ -176,6 +302,46 @@
               </p>
             </div>
           </div>
+        </section>
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </p>
+          <ul class="resources__logo-zone">
+            <li>
+              <a href="#" target="_blank"
+                ><img
+                  class="resources__logo"
+                  src="./images/logo/resources-arzamas.svg"
+                  alt="Логотип 'Arzamas'"
+              /></a>
+            </li>
+            <li>
+              <a href="#" target="_blank"
+                ><img
+                  class="resources__logo"
+                  src="./images/logo/resources-n1.svg"
+                  alt="Логотип 'N+1'"
+              /></a>
+            </li>
+            <li>
+              <a href="#" target="_blank"
+                ><img
+                  class="resources__logo"
+                  src="./images/logo/resources-strelka.svg"
+                  alt="Логотип 'Strelka'"
+              /></a>
+            </li>
+            <li>
+              <a href="#" target="_blank"
+                ><img
+                  class="resources__logo"
+                  src="./images/logo/resources-polka.svg"
+                  alt="Логотип 'ПОЛКА'"
+              /></a>
+            </li>
+          </ul>
         </section>
       </main>
       <footer class="footer">
