с файловой структурой по БЭМ для стилей и изображений

--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link href="./styles/normalize.css" rel="stylesheet" />
-    <link href="./styles/style.css" rel="stylesheet" />
+    <link href="./pages/index.css" rel="stylesheet" />
   </head>
   <body>
     <div class="page">
       <header class="header">
         <img
           class="logo logo_place_header"
-          src="./images/logo_place_header.svg"
+          src="./images/logo/logo_place_header.svg"
           alt="Логотип Яндекс Практикум"
         />
         <h1 class="header__title">Научиться учиться</h1>
@@ -24,7 +23,7 @@
         <div class="header__square-pic rotation"></div>
         <img
           class="header__main-illustration"
-          src="./images/header-image.png"
+          src="./images/header/header-image.png"
           alt="Фрагмент картины Решетникова 'Опять двойка'"
         />
       </header>
@@ -60,7 +59,7 @@
             <div class="cards__item">
               <img
                 class="cards__image"
-                src="./images/cards-attention.png"
+                src="./images/cards/cards-attention.png"
                 alt="Изображение книги в руках"
               />
               <h3 class="cards__title">Два вида внимания</h3>
@@ -72,7 +71,7 @@
             <div class="cards__item">
               <img
                 class="cards__image"
-                src="./images/cards-recall.png"
+                src="./images/cards/cards-recall.png"
                 alt="Изображение скульптуры сидящего мальчика"
               />
               <h3 class="cards__title">Recall</h3>
@@ -84,7 +83,7 @@
             <div class="cards__item">
               <img
                 class="cards__image"
-                src="./images/cards-interliving.png"
+                src="./images/cards/cards-interliving.png"
                 alt="Изображение вестибюля метро"
               />
               <h3 class="cards__title">Интерливинг</h3>
@@ -96,7 +95,7 @@
             <div class="cards__item">
               <img
                 class="cards__image"
-                src="./images/cards-question.png"
+                src="./images/cards/cards-question.png"
                 alt="Изображение человека, стоящего посередине пустого зала"
               />
               <h3 class="cards__title">Вопросы</h3>
@@ -108,7 +107,7 @@
             <div class="cards__item">
               <img
                 class="cards__image"
-                src="./images/cards-competence.png"
+                src="./images/cards/cards-competence.png"
                 alt="Изображение стопки книг на ладони"
               />
               <h3 class="cards__title">Иллюзия компетентности</h3>
@@ -223,7 +222,7 @@
             <div class="khan__book-container">
               <img
                 class="khan__book-pic"
-                src="./images/khan-book.jpg"
+                src="./images/khan/khan-book.jpg"
                 alt="Обложка книги Салмана Хана 'Весь мир - школа'"
               />
               <a href="#" class="khan__buy-link" target="_blank"
@@ -313,7 +312,7 @@
               <a href="#" target="_blank"
                 ><img
                   class="resources__logo"
-                  src="./images/logo/resources-arzamas.svg"
+                  src="./images/resources/resources-arzamas.svg"
                   alt="Логотип 'Arzamas'"
               /></a>
             </li>
@@ -321,7 +320,7 @@
               <a href="#" target="_blank"
                 ><img
                   class="resources__logo"
-                  src="./images/logo/resources-n1.svg"
+                  src="./images/resources/resources-n1.svg"
                   alt="Логотип 'N+1'"
               /></a>
             </li>
@@ -329,7 +328,7 @@
               <a href="#" target="_blank"
                 ><img
                   class="resources__logo"
-                  src="./images/logo/resources-strelka.svg"
+                  src="./images/resources/resources-strelka.svg"
                   alt="Логотип 'Strelka'"
               /></a>
             </li>
@@ -337,7 +336,7 @@
               <a href="#" target="_blank"
                 ><img
                   class="resources__logo"
-                  src="./images/logo/resources-polka.svg"
+                  src="./images/resources/resources-polka.svg"
                   alt="Логотип 'ПОЛКА'"
               /></a>
             </li>
@@ -349,7 +348,7 @@
           <div class="footer__column footer__column_content_copyright">
             <img
               class="logo logo_place_footer"
-              src="./images/logo_place_footer.svg"
+              src="./images/logo/logo_place_footer.svg"
               alt="Логотип Яндекс Практикум"
             />
             <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
@@ -369,7 +368,7 @@
                 <a href="#" class="footer__column-link" target="_blank"
                   ><img
                     class="footer__social-icon"
-                    src="./images/facebook_color_white.svg"
+                    src="./images/footer/facebook_color_white.svg"
                     alt="Иконка 'Facebook'"
                   />Facebook</a
                 >
@@ -378,7 +377,7 @@
                 <a href="#" class="footer__column-link" target="_blank"
                   ><img
                     class="footer__social-icon"
-                    src="./images/vk_color_white.svg"
+                    src="./images/footer/vk_color_white.svg"
                     alt="Иконка 'Вконтакте'"
                   />ВКонтакте</a
                 >
@@ -387,7 +386,7 @@
                 <a href="#" class="footer__column-link" target="_blank"
                   ><img
                     class="footer__social-icon"
-                    src="./images/instagram_color_white.svg"
+                    src="./images/footer/instagram_color_white.svg"
                     alt="Иконка 'Instagram'"
                   />Instagram</a
                 >
